yaml/odh-tec.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: odh-tec
  labels:
    app: odh-tec
    app.kubernetes.io/component: odh-tec
    app.kubernetes.io/instance: odh-tec
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: odh-tec
  template:
    metadata:
      creationTimestamp: null
      labels:
        deployment: odh-tec      
    spec:
      containers:
        - name: odh-tec
          image: 'quay.io/rh-aiservices-bu/odh-tec'
          ports:
            - containerPort: 8080
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
kind: Service
apiVersion: v1
metadata:
  name: odh-tec
  labels:
    app: odh-tec
    app.kubernetes.io/component: odh-tec
    app.kubernetes.io/instance: odh-tec  
spec:  
  ipFamilies:
    - IPv4
  ports:
    - name: 8888-tcp
      protocol: TCP
      port: 8888
      targetPort: 8888
  internalTrafficPolicy: Cluster  
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    deployment: odh-tec
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: odh-tec
  labels:
    app: odh-tec
    app.kubernetes.io/component: odh-tec
    app.kubernetes.io/instance: odh-tec  
spec:
  to:
    kind: Service
    name: odh-tec
    weight: 100
  port:
    targetPort: 8888-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
